# MemoryRepo

./: .gitignore  README.md  package.json  pyproject.toml
.specs/: 00_tech_stack_setup.md  01_project_overview.md  02_requirements.md  03_entitlements_and_plans.md  04_session_lifecycle.md  05_memory_service.md  06_mcp_connector_spec.md  07_data_model.md  08_hld_architecture.md  09_mermaid_architecture.md  10_low_latency_design.md  11_rag_and_retrieval.md  16_cicd.md  17_terraform_plan.md  18_api_contract.md  19_task_breakdown.md  20_delivery_plan.md  21_test_strategy.md  22_decisions_log.md
src/memorizerepo/: __init__.py  cli.py
src/memoryrepo/: __init__.py  cli.py
tests/: test_cli.py
vscode-extension/: .vscodeignore  README.md  package.json  tsconfig.json
vscode-extension/src/: extension.ts
vscode-extension/src/test/: extension.test.ts
