[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "memorizerepo"
version = "0.1.0"
description = "A CLI tool for building memory from JavaScript, Python, and C repositories."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "MemorizeRepo contributors" }
]

[project.scripts]
memorizerepo = "memorizerepo.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
